# llm-nest-python

./: .gitignore  LICENSE  README.md  README_zh.md  main.py  pyproject.toml
.github/workflows/: release.yml
llm_nest/cli/: __init__.py  context.py  main.py
llm_nest/cli/commands/: hub.py  models.py  run.py  serve.py
llm_nest/cli/ui/: __init__.py  output.py
llm_nest/config/: __init__.py  i18n.py  locales.py  settings.py
llm_nest/core/models/: __init__.py  enums.py  gguf.py  model_info.py
llm_nest/core/registry/: __init__.py  aliases.py  registry.py  search.py
llm_nest/core/runtime/: __init__.py  base.py  config.py  llama_cpp.py  loader.py
llm_nest/core/storage/: __init__.py  file_ops.py  model_store.py  paths.py
llm_nest/hub/: __init__.py  download.py  result.py  search.py
tests/: test_gguf.py  test_hub.py  test_models.py  test_registry.py  test_runtime.py  test_storage.py
