[project]
name = "llm-nest-python"
version = "0.1.0"
description = "本地 LLM Runtime 与 GGUF 模型管理工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.17.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "llama-cpp-python>=0.3.23",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
llmn = "llm_nest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["llm_nest"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
